deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unravel-be
  labels:
    name: unravel-be

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: unravel-be
  namespace: unravel-be
  labels:
    app: unravel-be
spec:
  replicas: 1
  selector: # the deployment will manage pods with the following labels.
    matchLabels:
      app: unravel-be
  template: # pod template
    metadata:
      labels:
        app: unravel-be
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - arm64
      containers:
      - name: app
        image: 833481287972.dkr.ecr.ap-southeast-1.amazonaws.com/jeremy/testing:latest
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "250m"
            memory: "128Mi"
        # imagePullPolicy: Never
        readinessProbe:
          httpGet:
            path: /health  # health check endpoint
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
      nodeSelector:
        kubernetes.io/os: linux

---

apiVersion: v1
kind: Service
metadata:
  name: unravel-be-svc
  namespace: unravel-be
spec:
  selector:
    app: unravel-be  # This selector matches the Pod's labels
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---

# https://github.com/kubernetes-sigs/aws-load-balancer-controller/issues/4014
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unravel-be-lb
  namespace: unravel-be
  annotations: # https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.2/guide/ingress/annotations/
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: unravel-be-lb
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":8080}]'
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: unravel-be-svc
      port:
        number: 8080
